--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
                 </div>
               </nav>
         </header>
+        <main>
+            <section>
+                <div class="container">
+                <form action="https://www.freecodecamp.com/email-submit" method="POST" id="form">
+                    <h2>Handcrafted, home-made masterpieces</h2>
+                    <div class="form-group">
+                        <input type="email" class="form-control" id="email" placeholder="Enter your email address" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">GET STARTED</button>
+                </form>
+                </div>
+            </section>
+        </main>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
