Change form button to submit input

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <div class="form-group">
                         <input type="email" class="form-control" id="email" placeholder="Enter your email address" required>
                     </div>
-                    <button type="submit" class="btn btn-primary">GET STARTED</button>
+                    <input type="submit" class="btn btn-primary" id="submit" value="GET STARTED">
                 </form>
                 </div>
             </section>
