--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header id="header">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="nav-bar">
+            <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="nav-bar">
                 <a class="navbar-brand" href="#"><img src="https://s3.amazonaws.com/freecodecamp/original_trombones.png" alt="product logo" id="header-img"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -36,7 +36,7 @@
                     <div class="form-group">
                         <input type="email" class="form-control" id="email" placeholder="Enter your email address" name="email" required>
                     </div>
-                    <input type="submit" class="btn btn-primary" id="submit" value="GET STARTED">
+                    <input type="submit" class="btn btn-warning" id="submit" value="GET STARTED">
                 </form>
                 </div>
             </section>
