Add features section
Add placeholder text for now
Change positioning for section rows and columns
Add media query for section
Connect Features button with section
Add smooth scrolling

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Features</a>
+                      <a class="nav-link" href="#features">Features</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">How It Works</a>
@@ -31,15 +31,42 @@
         <main>
             <section>
                 <div class="container">
-                <form action="https://www.freecodecamp.com/email-submit" method="POST" id="form">
-                    <h2>Handcrafted, home-made masterpieces</h2>
-                    <div class="form-group">
-                        <input type="email" class="form-control" id="email" placeholder="Enter your email address" name="email" required>
-                    </div>
-                    <input type="submit" class="btn btn-warning" id="submit" value="GET STARTED">
-                </form>
+                  <form action="https://www.freecodecamp.com/email-submit" method="POST" id="form">
+                      <h2>Handcrafted, home-made masterpieces</h2>
+                      <div class="form-group">
+                          <input type="email" class="form-control" id="email" placeholder="Enter your email address" name="email" required>
+                      </div>
+                      <input type="submit" class="btn btn-warning" id="submit" value="GET STARTED">
+                  </form>
                 </div>
             </section>
+            <div id="features"></div>
+            <section>
+              <div class="container mt-5 pt-5">
+                <div class="row mb-5">
+                  <div class="col-2 naslov">sadsadsadsads</div>
+                  <div class="col-10 tekst">
+                    <h4>Premium Materials</h4>
+                    <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
+                  </div>
+                </div>
+                <div class="row mb-5">
+                  <div class="col-2 naslov">sadsadsadsads</div>
+                  <div class="col-10 tekst">
+                      <h4>Fast Shipping</h4>
+                      <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
+                  </div>
+                </div>
+                <div class="row mb-5">
+                  <div class="col-2 naslov">sadsadsadsads</div>
+                  <div class="col-10 tekst">
+                      <h4>Quality Assurance</h4>
+                      <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
+                  </div>
+                </div>
+              </div>
+            </section>
+
         </main>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
