Add icons to features page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>FCC Product Landing Page</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
+        <script src="https://kit.fontawesome.com/71fa3528c7.js"></script>
     </head>
     <body>
         <header id="header">
@@ -44,21 +45,21 @@
             <section>
               <div class="container mt-5 pt-5">
                 <div class="row mb-5">
-                  <div class="col-2 naslov">sadsadsadsads</div>
+                  <div class="col-2 naslov"><i class="fas fa-fire"></i></div>
                   <div class="col-10 tekst">
                     <h4>Premium Materials</h4>
                     <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
                   </div>
                 </div>
                 <div class="row mb-5">
-                  <div class="col-2 naslov">sadsadsadsads</div>
+                  <div class="col-2 naslov"><i class="fas fa-shipping-fast"></i></div>
                   <div class="col-10 tekst">
                       <h4>Fast Shipping</h4>
                       <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
                   </div>
                 </div>
                 <div class="row mb-5">
-                  <div class="col-2 naslov">sadsadsadsads</div>
+                  <div class="col-2 naslov"><i class="fas fa-battery-full"></i></div>
                   <div class="col-10 tekst">
                       <h4>Quality Assurance</h4>
                       <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
