Embed video section
Change columns in feature section for better responsivity
Center video on page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                       <a class="nav-link" href="#features">Features</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">How It Works</a>
+                      <a class="nav-link" href="#howitworks">How It Works</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Pricing</a>
@@ -41,30 +41,38 @@
                   </form>
                 </div>
             </section>
+
             <div id="features"></div>
             <section>
               <div class="container mt-5 pt-5">
                 <div class="row mb-5">
-                  <div class="col-2 naslov"><i class="fas fa-fire"></i></div>
-                  <div class="col-10 tekst">
+                  <div class="col-sm-2 naslov"><i class="fas fa-fire"></i></div>
+                  <div class="col-sm-10 tekst">
                     <h4>Premium Materials</h4>
                     <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
                   </div>
                 </div>
                 <div class="row mb-5">
-                  <div class="col-2 naslov"><i class="fas fa-shipping-fast"></i></div>
-                  <div class="col-10 tekst">
+                  <div class="col-sm-2 naslov"><i class="fas fa-shipping-fast"></i></div>
+                  <div class="col-sm-10 tekst">
                       <h4>Fast Shipping</h4>
                       <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
                   </div>
                 </div>
                 <div class="row mb-5">
-                  <div class="col-2 naslov"><i class="fas fa-battery-full"></i></div>
-                  <div class="col-10 tekst">
+                  <div class="col-sm-2 naslov"><i class="fas fa-battery-full"></i></div>
+                  <div class="col-sm-10 tekst">
                       <h4>Quality Assurance</h4>
                       <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
                   </div>
                 </div>
+              </div>
+            </section>
+
+            <div id="howitworks"></div>
+            <section>
+              <div class="container pt-5" id="video">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
             </section>
 
