--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                       <a class="nav-link" href="#howitworks">How It Works</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
+                        <a class="nav-link" href="#pricing">Pricing</a>
                     </li>
                   </ul>
                 </div>
@@ -75,6 +75,44 @@
               <div class="container pt-5" id="video">
                   <iframe width="560" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
+            </section>
+
+            <div id="pricing"></div>
+            <section>
+              <div class="container">
+                <div class="row justify-content-around">
+                    <div class="col-md-4 col-sm-6 mt-5 pricetext">
+                      <div class="card bg-light mb-3" style="max-width: 18rem;">
+                        <div class="card-header">TENOR TROMBONE</div>
+                        <div class="card-body">
+                          <h5 class="card-title">$600</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-warning">SELECT</a>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6 mt-5 pricetext">
+                      <div class="card bg-light mb-3" style="max-width: 18rem;">
+                        <div class="card-header">BASS TROMBONE</div>
+                        <div class="card-body">
+                          <h5 class="card-title">$900</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-warning">SELECT</a>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6 mt-5 pricetext">
+                      <div class="card bg-light mb-3" style="max-width: 18rem;">
+                        <div class="card-header">VALVE TROMBONE</div>
+                        <div class="card-body">
+                          <h5 class="card-title">$1200</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-warning">SELECT</a>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+              </div>              
             </section>
 
         </main>
