Add footer and style pricing section
Add custom margins to pricing section
Align footer content
Refactor CSS code

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <section>
               <div class="container">
                 <div class="row justify-content-around">
-                    <div class="col-md-4 col-sm-6 mt-5 pricetext">
+                    <div class="col-md-4 col-sm-6 pricetext">
                       <div class="card bg-light mb-3" style="max-width: 18rem;">
                         <div class="card-header">TENOR TROMBONE</div>
                         <div class="card-body">
@@ -91,7 +91,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-md-4 col-sm-6 mt-5 pricetext">
+                    <div class="col-md-4 col-sm-6 pricetext">
                       <div class="card bg-light mb-3" style="max-width: 18rem;">
                         <div class="card-header">BASS TROMBONE</div>
                         <div class="card-body">
@@ -101,7 +101,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-md-4 col-sm-6 mt-5 pricetext">
+                    <div class="col-md-4 col-sm-6 pricetext">
                       <div class="card bg-light mb-3" style="max-width: 18rem;">
                         <div class="card-header">VALVE TROMBONE</div>
                         <div class="card-body">
@@ -114,6 +114,11 @@
                 </div>
               </div>              
             </section>
+
+            <footer>
+                <hr class="my-4">
+                <p>FCC Product Landing Page made by <a href="https://www.linkedin.com/in/csstefan" target="_blank">Ciric Stefan.</a></p>
+            </footer>
 
         </main>
 
